Add RemoveMonitorVistor
We can use it to give a chance to handle 'Pinned: MONITOR'
issue  #250 #273.